[project]
name = "devbot-gh-assistant"
version = "0.1.0"
description = "A GitHub operations assistant that uses an LLM agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "python-decouple>=3.8",
]
